--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,5 +11,6 @@ phases:
   post_build:
     commands:
       - docker push public.ecr.aws/g2p3s8z6/my-app-repo-05312023:latest
-      - printf '[{"name":<TASK_DEFENITION_NAME>,"imageUri":"%s"}]'<ECR_URL> > imagedefinitions.json
-artifacts: files:imagedefinitions.json
+      - printf '[{"name":"myAppTask","imageUri":"%s"}]'public.ecr.aws/g2p3s8z6/my-app-repo-05312023:latest > imagedefinitions.json
+artifacts: 
+    files:imagedefinitions.json
